# cat

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  queries.txt  scrape_meditations.py
.github/workflows/: mypy.yml
analysis/scripts/: aggregate_report.py
data/raw/: all_scripts.json  manual_entries.json
data/raw/guided_meditation_site/: about_us.txt  acknowledge_all_awareness.txt  angel_healing_meditation.txt  angelic_music.txt  anxiety_relief_meditations.txt  articles_home.txt  benefits_of_guided_meditation.txt  binaural_meditation.txt  binaural_music.txt  bliss_for_your_brain.txt  bluebell_wood_meditation.txt  body_awareness_meditation.txt  brainwave_entrainment.txt  browse_by_type.txt  browse_music_types.txt  buddhist_guided_meditation.txt  chakra_meditations.txt  chakra_music.txt  coastal_path_meditation.txt  contact.txt  create_a_guided_meditation.txt  flowing_stream_meditation.txt  forest_waterfall.txt  free_meditation_music.txt  freebies.txt  gently_down_the_stream.txt  guided_imagery.txt  guided_imagery_meditations.txt  guided_loving_kindness_buddhist_meditation.txt  guided_meditation_videos.txt  guided_meditations.txt  healing_guided_meditation.txt  heart_breath.txt  (+52 more)
data/scored/: guided_meditation_site_scored.json  manual_entries_scored.json
scoring/: __init__.py  pass1_indicators.py  pass2_llm_prompt.txt  pipeline.py  track_state.py
scraping/: scrape_guided_meditation_site.py  scrape_inner_health_studio.py  scrape_scripts.py
src/: scorer.py  scrape_guided_meditation_site.py  scrape_scripts.py
tests/: test_pipeline.py  test_scrape.py
(+52 files in other folders)
